@@ -831,6 +831,21 @@ gboolean hd_render_manager_actor_is_visible(ClutterActor *actor)
   return TRUE;
 }
 
+static gboolean
+hd_render_manager_should_status_area_be_visible ()
+{
+  HdRenderManagerPrivate *priv = render_manager->priv;
+
+  if (((priv->previous_state == HDRM_STATE_LOADING) && (priv->state == HDRM_STATE_APP_PORTRAIT)) ||
+      ((priv->previous_state == HDRM_STATE_HOME_EDIT_PORTRAIT) && (priv->state == HDRM_STATE_HOME)) ||
+      ((priv->previous_state == HDRM_STATE_HOME_EDIT) && (priv->state == HDRM_STATE_HOME_PORTRAIT)) ||
+      ((priv->previous_state == HDRM_STATE_TASK_NAV_PORTRAIT) && (priv->state == HDRM_STATE_APP))
+     )
+    return TRUE;
+
+  return FALSE;
+}
+
 /* Show or hide the status area - by moving it offscreen so it can't be clicked,
  * as well as by hiding the actor itself. */
 static void hd_render_manager_update_status_area(gboolean has_fullscreen)
@@ -1052,10 +1067,7 @@ void hd_render_manager_sync_clutter_before ()
       STATE_IS_NON_COMP (priv->previous_state))
     hd_render_manager_set_visibilities();
 
-  if (((priv->previous_state == HDRM_STATE_LOADING) && (priv->state == HDRM_STATE_APP_PORTRAIT)) ||
-      ((priv->previous_state == HDRM_STATE_HOME_EDIT_PORTRAIT) && (priv->state == HDRM_STATE_HOME)) ||
-      ((priv->previous_state == HDRM_STATE_HOME_EDIT) && (priv->state == HDRM_STATE_HOME_PORTRAIT))
-     )
+  if (hd_render_manager_should_status_area_be_visible ())
     hd_render_manager_update_status_area(TRUE);
   else
     hd_render_manager_update_status_area(FALSE);
@@ -1101,10 +1113,7 @@ void hd_render_manager_sync_clutter_after ()
       (priv->previous_state == HDRM_STATE_LAUNCHER_PORTRAIT))
     clutter_actor_show (priv->operator);
 
-  if (((priv->previous_state == HDRM_STATE_LOADING) && (priv->state == HDRM_STATE_APP_PORTRAIT)) ||
-      ((priv->previous_state == HDRM_STATE_HOME_EDIT_PORTRAIT) && (priv->state == HDRM_STATE_HOME)) ||
-      ((priv->previous_state == HDRM_STATE_HOME_EDIT) && (priv->state == HDRM_STATE_HOME_PORTRAIT))
-     )
+  if (hd_render_manager_should_status_area_be_visible ())
     hd_render_manager_update_status_area(FALSE);
 
   if (STATE_BLUR_BUTTONS(priv->state) &&
