@@ -2,8 +2,9 @@ hildon-desktop (1:2.2.151~1) unstable; urgency=low
 
   * [UNRELEASED]
   * Fixed: BMO #12266: ctrl_backspace_in_tasknav == 5 with a notification thumb in the task navigator results in crash.
+  * Fixed: Relaunching landscape-only application from the portrait launcher leads to visual glitches.
 
- -- Tomasz Pieniążek <t.pieniazek@gazeta.pl>  Sun, 25 Jan 2013 11:41:00 +0200
+ -- Tomasz Pieniążek <t.pieniazek@gazeta.pl>  Sun, 25 Jan 2013 17:07:00 +0200
 
 hildon-desktop (1:2.2.150-1) unstable; urgency=low
 
